syntax = "proto3";

package ru.gb.products;

option java_multiple_files = true;
option java_package = "ru.gb.products.grpc";

message ProductRequest {
  int64 id = 1;
}

message ProductResponse {
  int64 id = 1;
  string title = 2;
  int32 cost = 3;
  string date = 4;
}

service ProductService {
  rpc products(ProductRequest) returns (ProductResponse);
}